# TymoshenkoCI

./: CMakeLists.txt  main.cpp
.github/workflows/: build_cmake.yml
exception/: IllegalArgumentException.cpp  IllegalArgumentException.h
random/: LinearCongruentRandom.cpp  LinearCongruentRandom.h  Random.cpp  Random.h
test/: test.cpp
